# VKarmani-Desktop

./: .env.example  .gitattributes  .gitignore  README.md  RELEASE_CHECKLIST.md  START_VKarmani.bat  UPDATER_RELEASE_NOTES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: UPDATER_RELEASE_CHECKLIST.md
resources/core/windows/: core-manifest.json
scripts/: fetch-xray-windows.ps1  repair-xray-windows.ps1  set-version.mjs  verify-updater-config.mjs  verify-xray-windows.ps1
src/: App.tsx  i18n.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: app_run.rs  commands.rs  core_paths.rs  lib.rs  main.rs  platform.rs  remote_fetch.rs  runtime_lifecycle.rs  runtime_status.rs  state.rs  tests.rs  xray_config.rs
src/components/: AuthScreen.tsx  DevicesTab.tsx  DiagnosticsTab.tsx  OverviewTab.tsx  ServersTab.tsx  SettingsTab.tsx  SidebarNav.tsx  TabErrorBoundary.tsx  ToastViewport.tsx  WindowHeader.tsx
src/data/: devices.ts  diagnostics.ts  servers.ts  sessions.ts
src/hooks/: usePersistentState.ts
src/services/: remnawave.ts  runtime.ts  storage.ts  updater.ts
src/services/remnawave/: parserCore.ts  subscriptionParser.ts
src/styles/: auth-and-shell.css  features.css  layout-and-panels.css  responsive.css  tokens.css
src/types/: vpn.ts
src/utils/: serverDisplay.ts
tests/: remnawave.test.ts
