[package]
name = "vkarmani-desktop"
version = "0.13.19"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vkarmani_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-updater = "2.10.0"
